# IUGV

./: README.md
.docker/: Dockerfile  base.sh  compile.sh  develop.sh  start.sh  start_robot.sh  stop.sh
hardware_if/: CMakeLists.txt  package.xml
hardware_if/include/iugv/: hardware_definitions.hpp  hardware_setup.hpp  third_party.hpp
hardware_if/include/iugv/control/: motor_control.hpp
hardware_if/src/: hardware_if.cpp
iugv_control/: CMakeLists.txt  package.xml
iugv_control/include/iugv/control/: control.hpp
iugv_control/include/iugv/models/: differential_drive.hpp
iugv_interfaces/: CMakeLists.txt  package.xml
iugv_interfaces/srv/: Stepper.srv
