<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hardware_if</name>
  <version>0.0.1</version>
  <description>hardware_if</description>
  <maintainer email="praneeth.pep@gmail.com">Kvk Praneeth</maintainer>
  <license>TODO</license>

  <author email="praneeth.pep@gmail.com">Kvk Praneeth</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>