<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iugv_control</name>
  <version>0.0.1</version>
  <description>iugv_control</description>
  <maintainer email="praneeth.pep@gmail.com">Kvk Praneeth</maintainer>
  <license>TODO</license>

  <author email="praneeth.pep@gmail.com">Kvk Praneeth</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>